// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jsx-vue-directive > v-for > ./fixtures/v-for/v-for.tsx 1`] = `
"// @ts-nocheck
const list = [1, 2, 3]

export default () => (
  <>
    {list.map((i, index) => <div key={index}>
      <div>{i}</div>
    </div>)}
  </>
)
"
`;

exports[`jsx-vue-directive > v-for > ./fixtures/v-for/v-for.vue 1`] = `
"<script setup lang=\\"tsx\\">
const list = [1, 2, 3]

defineRender(() => (
  <>
    {list.map(i => <div key={i}>
      <div>{i}</div>
    </div>)}
  </>
))
</script>
"
`;
